--- a/src/leiningen/new/mockup/ui/_assets/site.css
+++ b/src/leiningen/new/mockup/ui/_assets/site.css
@@ -48,6 +48,12 @@ input[readonly] {
 span.glyphicon-envelope { font-size: 4em; float:right;}
 
 
+/* CSV Lists */
+.comma-list { display: inline; list-style: none; padding-left:0px;}
+.comma-list li { display: inline; }
+.comma-list li:after { content: ", "; }
+.comma-list li:last-child:after { content: "" }
+
 
 /* custom css below */
 
