--- a/src/leiningen/new/mockup/ui/_assets/site.css
+++ b/src/leiningen/new/mockup/ui/_assets/site.css
@@ -59,8 +59,10 @@ span.glyphicon-envelope { font-size: 4em; float:right;}
 /* General Items */
 .email {margin-top:40px;font-size:20px;}
 
-.notes { background-color: yellow; border:dotted 1px #ccc;
+.notes, .footnotes { background-color: yellow; border:dotted 1px #ccc;
   padding-left:10px; padding-right:10px; padding-top:2px; padding-bottom:2px; }
+
+.footnotes {margin-top:40px;}
 
 .actions {
     text-align:center;margin:40px;}
